--- a/templates/About.html
+++ b/templates/About.html
@@ -1,19 +1,38 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width-device-width, initial-scale=1">
+        <link rel="stylesheet" href="/static/styles.css">
+        <title>Next Up, Seattle!</title>
+    </head>
+    <body>
+        <div class="btnOpenNav">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <div class="sideNav">
+            <button class="btnCloseNav">X</button>
+            <br>
+            <a href="/" class="navOption">Home</a>
+            <br>
+            <a href="/About" class="navOption">About Us</a>
+            <br>
+            <a href="/Contact_Us" class="navOption">Contact Us</a>
+        </div>
 
-{% block title %}About Us{% endblock %}
-
-{% block content %}
-
-<h1>About Next Up</h1>
-<p style="text-align: center;">Developed by Chris Downing,
-    <br>The Headlands Co., 2024/2025</p>
-<br><br>
-<div style="max-width: 600px; font-size: 20px;">
-    <p class="box">Hello, Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
-        any given stage in Seattle.
-        <br><br>If you want to see more of what Seattle's music scene has to offer,
-        then this is the tool for you.  The list updates every day and will show you the next event
-        on each of our local venues' calendars, as well as those of Seattle's large arena venues.
-    </p>
-</div>
-{% endblock %}
+        <h1 style="text-align: center; margin-top: 25px;">About Next Up</h1>
+        <p style="text-align: center;">Developed by Chris Downing,
+            <br>The Headlands Co., 2024/2025</p>
+        <br><br>
+        <div style="max-width: 600px; font-size: 20px; margin: auto;">
+            <p class="box">Hello, Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
+                any given stage in Seattle.
+                <br><br>If you want to see more of what Seattle's music scene has to offer,
+                then this is the tool for you.  The list updates every day and will show you the next event
+                on each of our local venues' calendars, as well as those of Seattle's large arena venues.
+            </p>
+        </div>
+    <script src="/static/script.js"></script>
+    </body>
+</html>
