--- a/templates/About.html
+++ b/templates/About.html
@@ -23,7 +23,8 @@
 
         <h1 style="text-align: center; margin-top: 25px;">About Next Up</h1>
         <p style="text-align: center;">Developed by Chris Downing,
-            <br>The Headlands Co., 2024/2025</p>
+            <br>The Headlands Co.
+            <br> Last updated Jan 2, 2025</div></p>
         <br><br>
         <div style="max-width: 600px; font-size: 20px; margin: auto;">
             <p class="box">Hello, Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
