--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,18 @@
             <a href="/Contact_Us" class="navOption">Contact Us</a>
         </div>
 
-        <h1 class="pageTitle">Next Up, Seattle!</h1>
-
-        <div class="categories">
-            <button class="btnToggle show-music">Live <br> Music</button>
-            <button class="btnToggle show-art">Art<br>Events</button>
-            <button class="btnToggle show-performance">Performance<br>Art</button>
-            <button class="btnToggle show-venues">Venues</button>
+        <div class="title_image">
+            <img src="static/Next Up Seattle with Text - Block Cropped 1.jpg" alt="Next Up, Seattle!"
+            style="max-width: 100%">
         </div>
+<!--        <h1 class="pageTitle">Next Up, Seattle!</h1>-->
+
+<!--        <div class="categories">-->
+<!--            <button class="btnToggle show-music">Live <br> Music</button>-->
+<!--            <button class="btnToggle show-art">Art<br>Events</button>-->
+<!--            <button class="btnToggle show-performance">Performance<br>Art</button>-->
+<!--            <button class="btnToggle show-venues">Venues</button>-->
+<!--        </div>-->
 
         <div class="liveMusic">
             <ul class="listHeaders">
