--- a/templates/Contact Us.html
+++ b/templates/Contact Us.html
@@ -21,7 +21,7 @@
             <a href="/Contact_Us" class="navOption">Contact Us</a>
         </div>
         <br><br><br><br><br><br><br><br>
-        <h1 style="text-align: center;">Email us at <b>NextUpSeattle@protonmail.com</b></h1>
+        <h1 style="text-align: center;">Email us at <b>NextUpSeattle@proton.me</b></h1>
         <br>
         <h1 style="text-align: center;">:-)</h1>
         <br>
