Fixed Seamonster Lounge.  Venue links now open in new tabs (I think)?

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <ul>
                     <li class="venueInfo">
-                        <a href="{{info[0]}}">{{key}}</a>
+                        <a href="{{info[0]}}" target="_blank" rel="noopener noreferrer>{{key}}</a>
                         <br>
                         <p class="neighborhood"><i>{{info[1]}}</i></p>
                     </li>
