--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <link rel="stylesheet" href="/static/styles.css">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='Next Up Seattle Logo 2.ico') }}">
         <title>Next Up, Seattle!</title>
     </head>
     <body>
@@ -50,7 +51,7 @@
                 </div>
                 <ul>
                     <li class="venueInfo">
-                        <a href="{{info[0]}}" target="_blank" rel="noopener noreferrer>{{key}}</a>
+                        <a href="{{info[0]}}" target="_blank" rel="noopener noreferrer">{{key}}</a>
                         <br>
                         <p class="neighborhood"><i>{{info[1]}}</i></p>
                     </li>
