Add the Royal Room

--- a/templates/About.html
+++ b/templates/About.html
@@ -21,7 +21,7 @@
             <a href="/Contact_Us" class="navOption">Contact Us</a>
         </div>
 
-        <h1 style="text-align: center; margin-top: 25px;">About Next Up</h1>
+        <h1 style="text-align: center; margin-top: 25px;">About Next Up, Seattle</h1>
         <p style="text-align: center;">Developed by Chris Downing,
             <br>The Headlands Co.
             <br> Last updated Jan 2, 2025</div></p>
@@ -30,10 +30,39 @@
             <p class="box">Hello, Seattle!  Welcome to Next Up.  The best way to find out who's performing next on
                 any given stage in Seattle.
                 <br><br>If you want to see more of what Seattle's music scene has to offer,
-                then this is the tool for you.  The list updates every day and will show you the next event
-                on each of our local venues' calendars, as well as those of Seattle's large arena venues.
+                then this is the tool for you.  My goal is for it to be quicker to get information
+                here than on other popular live-event platforms.
             </p>
+            <p>
+                The list updates every day and will show you the next event
+                on each of our local venues' calendars, as well as those of Seattle's large arena
+                venues (which will be added back onto the site soon).
+            </p>
+            <p>
+                The selection of venues is small for the moment, but I am constantly working to add
+                more venues from more of our neighborhoods.
+            </p>
+            <p>
+                If you want to get a taste of what a
+                venue has to offer, check out their line-up, look up a few of the artists on streaming apps
+                or YouTube, and go check out a show if you like it!  Take risks, too.  If you're on
+                the fence about a local artist, take a chance and check them out for a couple bucks.
+                You don't have much to lose and a whole world of wonderful art to gain.
+            </p>
+            <p>
+            Here's what you can expect to come in the near future:
+            </p>
+            <div style="font-size: 17px;">
+                <p>➡️➡️ <strong>More venues!  I'm working to add new venues all the time. Neighborhoods I'll be
+                including in the near future include Columbia City and West Seattle.</strong></p>
+                <p>➡️➡️ <strong>Venues will be subdivided by neighborhood</strong></p>
+                <p>➡️➡️ <strong>An Arts Page! Where you can find info about Art Walks, gallery exhibitions, and
+                other events held at non-gallery spaces.</strong></p>
+            </div>
+            <p>Thanks for using Next Up, Seattle! I hope this will be a beneficial tool for you to
+            discover everything the local music and arts scene here in Seattle has to offer :)</p>
         </div>
+
     <script src="/static/script.js"></script>
     </body>
 </html>
