Fixed Substation module. Updated scraping method for Nectar Lounge and Hidden Hall

--- a/templates/Contact Us.html
+++ b/templates/Contact Us.html
@@ -20,11 +20,14 @@
             <br>
             <a href="/Contact_Us" class="navOption">Contact Us</a>
         </div>
-        <br><br><br><br><br><br><br><br>
-        <h1 style="text-align: center;">Email us at <b>NextUpSeattle@proton.me</b></h1>
-        <br>
-        <h1 style="text-align: center;">:-)</h1>
-        <br>
+        <div class="contact_info" style="max-width: 100%">
+            <br><br><br><br><br><br><br><br>
+            <h2 style="text-align: center;">Email us at <b>NextUpSeattle@proton.me</b></h2>
+            <br>
+            <h1 style="text-align: center;">:-)</h1>
+            <br>
+        </div>
+
 
     <script src="/static/script.js"></script>
     </body>
